# SwellSight

./: .gitignore  01_Setup_and_Installation.ipynb  01_Setup_and_Installation_Enhanced.ipynb  02_Data_Import_and_Preprocessing_Enhanced.ipynb  03_Depth_Anything_V2_Extraction.ipynb  04_Data_Augmentation_System.ipynb  04_Data_Augmentation_System_Enhanced.ipynb  05_ControlNet_Synthetic_Generation.ipynb  05_FLUX_ControlNet_Synthetic_Generation_Enhanced.ipynb  07_Exploratory_Data_Analysis.ipynb  DOCUMENTATION_SUMMARY.md  Dockerfile  INTEGRATION_GUIDE.md  LICENSE  README.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_12_IMPLEMENTATION_SUMMARY.md  TASK_14_IMPLEMENTATION_SUMMARY.md  TASK_2.4_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  config.json  data_lineage.db  docker-compose.yml  fix_notebook_imports.py  notebook_cell_fix.py  notebook_fallback_functions.py  notebook_integration_example.py  pyproject.toml  test_data_evaluation_basic.py  test_data_evaluation_properties_simple.py  test_error_handling_integration.py  test_performance_optimization.py  test_property_breaking_type_classification.py  test_property_confidence_score_generation.py  test_property_config_loading.py  test_property_data_quality_assessment.py  test_property_direction_classification.py  test_property_evaluation_metrics_accuracy.py  test_property_gpu_fallback_mechanism.py  (+10 more)
configs/: default.yaml  evaluation.yaml  inference.yaml  training.yaml
docs/: GETTING_STARTED.md  INFERENCE_GUIDE.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_FIXES_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_WAVE_ANALYSIS.md  README.md  START_HERE.md  TRAINING_FLOWCHART.md  TRAINING_FROM_SCRATCH.md  TRAINING_SUCCESS_SUMMARY.md  TROUBLESHOOTING.md  USER_GUIDE.md
evaluation_reports/: README.md
evaluation_reports/dashboard/: evaluation_summary.json  index.html
examples/: analyze_beach_cam.py
notebooks/: 02_Data_Import_and_Preprocessing.ipynb  02_Data_Import_and_Preprocessing_Enhanced.ipynb  03_Depth_Anything_V2_Extraction.ipynb  03_Depth_Anything_V2_Extraction_Enhanced.ipynb  03_MiDaS_Depth_Extraction.ipynb  04_Data_Augmentation_System.ipynb  04_Data_Augmentation_System_Enhanced.ipynb  05_FLUX_ControlNet_Synthetic_Generation_Enhanced.ipynb  06_Model_Training_Pipeline.ipynb  08_Model_Evaluation_and_Validation.ipynb  09_DINOv2_Backbone_Integration.ipynb  10_Multi_Task_Model_Architecture.ipynb  11_Wave_Analyzer_Training.ipynb  12_Wave_Metrics_Inference.ipynb  13_Wave_Analysis_Evaluation.ipynb
outputs/test_stage/: .completed  test_stage_results.json
requirements/: base.txt  development.txt  inference.txt  training.txt
scripts/: augment_data.py  check_training_readiness.py  create_evaluation_dashboard.py  create_monitoring_dashboard.py  deploy_api.py  evaluate.py  evaluate_model.py  extract_depth_maps.py  generate_dummy_data.py  generate_synthetic_data.py  inference.py  preprocess_data.py  start_api.py  train.py
slides/: Proposal.pptx
src/swellsight/: __init__.py  cli.py
tests/: __init__.py  run_property_tests.py  test_api_deployment.py  test_dinov2_backbone.py  test_integration_wave_model_trainer.py  test_property_batch_size_adaptation.py  test_property_confidence_score_generation.py  test_property_depth_map_quality_assessment.py  test_property_gpu_fallback_mechanism.py  test_property_mixed_precision_training.py  test_property_multi_task_input_processing.py  test_property_parameter_validation.py  test_property_performance_benchmarking_consistency.py  test_property_scale_preserving_augmentation.py  test_property_synthetic_data_distribution_comparison.py  test_property_synthetic_real_distribution_matching.py  test_property_wave_height_prediction.py  test_quality_validation_basic.py  test_wave_height_basic.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_pipeline.py
tests/property/: __init__.py  test_properties_config.py  test_properties_depth_normalization.py  test_properties_depth_quality.py  test_properties_image_validation.py
tests/unit/: test_automatic_labeling.py  (+2 more)
utils/: __init__.py  config_manager.py  data_flow_manager.py  data_validator.py  enhanced_batch_processor.py  error_handler.py  flux_memory_manager.py  memory_optimizer.py  parameter_analyzer.py  progress_tracker.py  requirements.txt
(+50 files in other folders)
